--- a/Week 2/Lab 2/Lab 2.qmd
+++ b/Week 2/Lab 2/Lab 2.qmd
@@ -5,7 +5,8 @@ format:
     embed-resources: true
 ---
 ### Repository Link  
-
+You can view the full project repository on [GitHub](https://github.com/DanielPelerman/GSB-544-Git/tree/main/Week%202/Lab%202). 
+ 
 ### Step 0: Import Data and Declare Package Dependencies 
 See code.
 ```{python}
