--- a/Week 9/Lab 8/Lab 8.qmd
+++ b/Week 9/Lab 8/Lab 8.qmd
@@ -6,7 +6,7 @@ format:
 ---
 
 ### Repository Link 
-You can view the full project repository on [Github]()
+You can view the full project repository on [Github](https://github.com/DanielPelerman/GSB-544-Git/tree/main/Week%209/Lab%208)
 
 ### Part 0: Data Cleaning and Summary
 
