quick edit, embed resources:true

--- a/Kaggle_Final/regression/dashboard/Regression_Dashboard2.qmd
+++ b/Kaggle_Final/regression/dashboard/Regression_Dashboard2.qmd
@@ -5,6 +5,8 @@ format:
     theme: cosmo
     orientation: rows
     sidebar: false
+    html:
+        embed-resources: true 
 execute:
   echo: false       # hide code globally
   warning: false    # hide warnings
